packages/alert/src/scss/_component.scss
@use "@uqds/core/src/scss/global" as core;
@use "@uqds/grid/src/scss/global" as grid;
@use "@uqds/icon/src/scss/global" as icon;
@use "global" as *;

.uq-alert {
  background-color: core.$utility-50;
  color: core.$grey-900;
  font-family: core.$font-body;
  font-size: core.$font-size-m;
  font-weight: core.$font-weight-normal;
  line-height: core.$line-height;
  position: relative;

  &__container {
    @include grid.layout-containment;
    @include grid.grid-col-padding;

    .uq-alert__message {
      &:not(:last-child) {
        padding-right: core.$space-xxxl;
      }
    }
  }

  &__title {
    font-size: core.$font-size-l;
    font-weight: core.$font-weight-medium;
    line-height: core.$line-height-h;
    color: core.$grey-900;
    margin: core.$space-none core.$space-none core.$space-s;
  }

  &__message {
    position: relative;
    padding: core.$space-l core.$space-xxxxl;

    &::before {
      content: "";
      background-image: url(icon.get-icon(
        "standard--information-circle",
        core.$grey-900
      ));
      background-repeat: no-repeat;
      background-size: 1.5rem;
      width: core.$space-l;
      height: core.$space-l;
      position: absolute;
      top: 25px;
      left: (core.$space-m);
    }

    p {
      margin-bottom: core.$space-m;
      margin-top: core.$space-none;

      &:last-child {
        margin-bottom: core.$space-none;
      }
    }
  }

  &__close {
    margin: 0;
    padding: 0;
    position: absolute;
    top: core.$space-none;
    right: -(core.$space-compressed-m);
    background-image: url(icon.get-icon("standard--x", core.$grey-900));
    background-repeat: no-repeat;
    background-size: 1rem;
    background-position: center;
    background-color: transparent;
    border: none;
    width: core.$space-xxl;
    height: core.$space-uul;
    text-indent: 999px;
    overflow: hidden;
    cursor: pointer;

    &:hover,
    &:focus {
      background-image: url(icon.get-icon("standard--x", core.$grey-900));
      background-color: transparent;
      border: none;
    }
  }

  &--info {
    background-color: core.$utility-50;

    .uq-alert__message {
      &::before {
        background-image: url(icon.get-icon(
          "standard--information-circle",
          core.$grey-900
        ));
      }
    }
  }
  &--success {
    background-color: core.$success-50;

    .uq-alert__message {
      &::before {
        background-image: url(icon.get-icon(
          "standard--check-circle",
          core.$grey-900
        ));
      }
    }
  }
  &--warning {
    background-color: core.$warning-50;

    .uq-alert__message {
      &::before {
        background-image: url(icon.get-icon(
          "standard--exclamation-triangle",
          core.$grey-900
        ));
      }
    }
  }
  &--error {
    background-color: core.$error-50;

    .uq-alert__message {
      &::before {
        background-image: url(icon.get-icon(
          "standard--x-circle",
          core.$grey-900
        ));
      }
    }
  }

  // Global alert
  &--global {
    .uq-alert__container {
      @media #{core.$screen-lg-up} {
        @include grid.layout-containment;
        @include grid.grid-col-padding;
      }
    }

    .uq-alert__message {
      line-height: #{core.$line-height}rem;
      font-weight: core.$font-weight-normal;
      padding: core.$space-l core.$space-xxl;

      @media #{core.$screen-md-up} {
        font-size: core.$font-size-m;
      }

      &::before {
        content: "";
        background-size: 1.5rem;
        width: core.$space-l;
        height: core.$space-l;
        position: absolute;
        top: core.$space-l;
        left: core.$space-none;
      }
    }
  }

  // Dark variant
  &--dark {
    background-color: core.$utility-500;
    color: core.$white;

    a {
      color: inherit;
      text-decoration: underline;

      &:hover,
      &:focus {
        background-color: core.$white;
        color: core.$purple-500;
      }
    }

    .uq-alert__title {
      color: core.$white;
    }

    .uq-alert__close {
      background-image: url(icon.get-icon("standard--x", core.$white));

      &:hover,
      &:focus {
        background-image: url(icon.get-icon("standard--x", core.$white));
        background-color: transparent;
      }
    }

    &.uq-alert--info {
      .uq-alert__message {
        &::before {
          background-image: url(icon.get-icon(
            "standard--information-circle",
            core.$white
          ));
        }
      }
    }

    &.uq-alert--success {
      background-color: core.$success-500;

      .uq-alert__message {
        &::before {
          background-image: url(icon.get-icon(
            "standard--check-circle",
            core.$white
          ));
        }
      }
    }

    &.uq-alert--warning {
      background-color: core.$warning-500;
      color: core.$grey-900;

      .uq-alert__title {
        color: core.$grey-900;
      }

      .uq-alert__close {
        background-image: url(icon.get-icon("standard--x", core.$grey-900));

        &:hover,
        &:focus {
          background-image: url(icon.get-icon("standard--x", core.$grey-900));
        }
      }
    }

    &.uq-alert--error {
      background-color: core.$error-500;

      .uq-alert__message {
        &::before {
          background-image: url(icon.get-icon(
            "standard--x-circle",
            core.$white
          ));
        }
      }
    }
  }
}

